--- a/client/.env.example
+++ b/client/.env.example
@@ -1,24 +1,10 @@
-# ─────────────────────────────────────────────────────────────────
-#  client/.env.example
-#  Copy this file to .env (development) or .env.production (prod).
-#  All variables MUST start with VITE_ to be accessible in browser code.
-#  NEVER put secrets in client env files — they are public.
-# ─────────────────────────────────────────────────────────────────
+# ─── Client Environment Variables ────────────────────────────────────────────
+# Copy this file to .env and fill in the values before running locally.
+# On Vercel, set these in Project → Settings → Environment Variables.
 
-# ── API / Server URL ─────────────────────────────────────────────
-# The base URL of the Express backend.
-# Development (using Vite dev proxy, leave empty or set to avoid proxy):
-VITE_SERVER_URL=http://localhost:5000
+# Full URL of the deployed backend (no trailing slash)
+# Example: https://whiteboard-api.onrender.com
+VITE_SERVER_URL=https://your-backend.onrender.com
 
-# Production (your deployed backend URL — no trailing slash):
-# VITE_SERVER_URL=https://api.whiteboard.example.com
-
-# ── App metadata ─────────────────────────────────────────────────
-# Displayed in page titles, meta tags etc.
+# Display name shown in the browser tab / headings
 VITE_APP_NAME=Collaborative Whiteboard
-VITE_APP_VERSION=1.0.0
-
-# ── Feature flags (optional) ─────────────────────────────────────
-# Set to "false" to disable features without code changes
-# VITE_ENABLE_SCREEN_SHARE=true
-# VITE_ENABLE_FILE_SHARE=true
