--- a/server/.env.example
+++ b/server/.env.example
@@ -1,48 +1,25 @@
-# ─────────────────────────────────────────────────────────────────
-#  server/.env.example
-#  Copy this file to .env and fill in real values.
-#  NEVER commit .env to version control.
-# ─────────────────────────────────────────────────────────────────
+# ─── Server Environment Variables ────────────────────────────────────────────
+# Copy this file to .env and fill in the values before running locally.
+# On Render.com, set these in the Environment section of your Web Service.
 
-# ── Runtime ──────────────────────────────────────────────────────
-# Node environment: development | production | test
-NODE_ENV=development
+# Runtime
+NODE_ENV=production
 
-# Port the Express server listens on
+# Express
 PORT=5000
 
-# ── Database ─────────────────────────────────────────────────────
-# MongoDB Atlas:  mongodb+srv://<user>:<pass>@cluster.mongodb.net/whiteboard
-# Local dev:      mongodb://localhost:27017/whiteboard
-MONGO_URI=mongodb://localhost:27017/whiteboard
+# MongoDB Atlas connection string
+# Format: mongodb+srv://<user>:<password>@<cluster>.mongodb.net/<dbname>?retryWrites=true&w=majority
+MONGO_URI=
 
-# ── Authentication ───────────────────────────────────────────────
-# Use a long, cryptographically random string in production.
-# Generate one with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
-JWT_SECRET=change_me_to_a_long_random_secret_in_production
-
-# JWT token lifetime (e.g. 7d, 24h, 1h)
+# JWT — generate with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=
 JWT_EXPIRES_IN=7d
 
-# ── CORS ─────────────────────────────────────────────────────────
-# Comma-separated list of allowed client origins (no trailing slash).
-# Development:
-CLIENT_URL=http://localhost:3000,http://localhost:4173
-# Production (examples — update to your actual domains):
-# CLIENT_URL=https://whiteboard.example.com,https://www.whiteboard.example.com
+# Comma-separated list of allowed frontend origins (no trailing slashes)
+# Example: https://my-app.vercel.app,https://www.my-app.com
+CLIENT_URL=https://your-app.vercel.app
 
-# ── Rate Limiting ─────────────────────────────────────────────────
-# Max requests per IP per window (default: 100 requests per 15 minutes)
-RATE_LIMIT_WINDOW_MS=900000
-RATE_LIMIT_MAX=100
-
-# ── File Uploads ──────────────────────────────────────────────────
-# Max file upload size in bytes (default: 20 MB)
-# UPLOAD_MAX_BYTES=20971520
-
-# Directory where uploaded files are stored (relative to server root)
-# UPLOADS_DIR=uploads
-
-# ── Socket.io ────────────────────────────────────────────────────
-# Connection state recovery window in milliseconds (default: 2 minutes)
-# SOCKET_RECOVERY_MS=120000
+# Rate limiting (optional — defaults used if omitted)
+# RATE_LIMIT_WINDOW_MS=900000
+# RATE_LIMIT_MAX=100
